plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace "me.ocv.partyup"
    compileSdk 36

    defaultConfig {
        applicationId "me.ocv.partyup"
        minSdk 21
        targetSdk 35
        versionCode 10901
        versionName "1.9.1"
        multiDexEnabled true

//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
//        signingConfig signingConfigs.release
//        minSdkVersion 24
//        targetSdkVersion 34
    }

    buildTypes {
        release {
            minifyEnabled false
//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }

    lint {
        checkReleaseBuilds false
    }

    // "Lint found fatal errors while assembling a release target:"
    // "Google Play requires that apps target API level 29 or higher"
    // lol how about no
}

dependencies {
    implementation libs.material
    implementation libs.preference
    implementation libs.zixing.core

//    testImplementation libs.junit
//    androidTestImplementation lib.ext.junit
//    androidTestImplementation lib.espresso.core
}
